# rust-pipeline

./: .gitignore  Cargo.toml  LICENSE  README.md  WIRE_REDESIGN.md  WIT_CONTRACT_SKETCH.md  wire.wit
examples/: fed_interop.rs
python/: README.md  interop_test.py  pyproject.toml  rust_pipeline_federation.py  selftest.py
src/: codec.rs  config.rs  envelope.rs  error.rs  federation.rs  handler.rs  lib.rs  middleware.rs  pipeline.rs  registry.rs  routing.rs  switchboard.rs  thread.rs  validation.rs  wire.rs
tests/: integration.rs
